add navbar, create file for css variables

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,18 @@
+@use "@angular/material" as mat;
+
 /* You can add global styles to this file, and also import other style files */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
 }
